--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ streamlit==1.32.0
 openai==1.12.0
 chromadb==0.4.22
 langchain==0.1.16
-langchain-community==0.0.29
 pdfplumber==0.10.3
 python-docx==1.1.0
 docx2txt==0.8
@@ -12,3 +11,5 @@ pypdf==4.1.0
 pydantic==2.6.4
 typing-extensions==4.10.0
 sqlite3
+numpy==1.24.4
+protobuf==4.25.3
