--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
-streamlit==1.32.0
-openai==1.12.0
-chromadb==0.4.22
-langchain==0.1.16
-
-python-docx==1.1.0
-docx2txt==0.8
-python-dotenv==1.0.1
-tiktoken==0.6.0
-pypdf==4.1.0
-pydantic==2.6.4
-typing-extensions==4.10.0
-sqlite3
-numpy==1.24.4
-protobuf==4.25.3
+streamlit>=1.30.0
+openai>=1.10.0
+chromadb>=0.4.15
+langchain>=0.1.10
+pdfplumber>=0.10.0
+docx2txt>=0.8
+python-dotenv>=1.0.0
+tiktoken>=0.5.0
